some typos and stuff

--- a/Paper/projectreport.tex
+++ b/Paper/projectreport.tex
@@ -37,7 +37,7 @@ Our goal in this project was to compare the performances of several different pa
 %%%%% DATASET %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Dataset and Parsers}
-For our project, we used data from the 2016 CoNLL shared task \cite{xue2016conll}. We were graciously provided with the output of all submitted parsers for the sense-only challenge, but could not obtain full data including the argument spans. Because only few parsers were publicly available and we were only able to run two of them, we limited our analysis to sense identification.
+For our project, we used data from the 2016 CoNLL shared task \cite{xue2016conll}. We were graciously provided with the output of all submitted parsers for the sense-only challenge by Te Rutherford, but could not obtain full data including the argument spans. Because only few parsers were publicly available and we were only able to run two of them, we limited our analysis to sense identification.
 
 The methods we used for analysing the sense identification performance can also be used for the argument spans. Below, we present a way to create dummy data for testing purposes. If full data should become available, the analysis can easily be extended to include the argument spans.
 
@@ -63,16 +63,15 @@ We then used the F1 scores to implement several methods of combining the parser 
 \item \textbf{best three agreement:} Same as agreement, but only take into account the three identified senses with the highest F1 score.
 \end{itemize}
 
-Our code can be found as commented IPython/Jupyter notebooks at \url{https://github.com/PaulOpu/sdp-project/tree/master/Coding}.
+Our code can be found as IPython notebooks at \url{https://github.com/PaulOpu/sdp-project/tree/master/Coding}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% EVALUATION %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\pagebreak
 \section*{Evaluation}
 As a first step, we looked at the inter-parser agreement to get a grasp on the individual and group performance of the parsers. Table \ref{tab:comp1} shows the inter-parser sense agreement between the three highest scoring parsers ''oslopots'', ''ecnucs'' and ''steven''.
 
-It is rare that all parsers predict the correct sense, with this happening for a third of all occurences for a contrast relation, but never for restatements. It is far more common that one or two of the parsers get the correct result, with the others predicting a wrong sense. For all relations, this happens in at least half of the cases, with percentages usually being higher than that, for example 200 out of 217 for entity relations and 327 out of 391 for conjunctions.
+It is rare that all parsers predict the correct sense, with this happening for a third of all occurences for a contrast relation, but never for restatements. It is far more common that one or two of the parsers get the correct result, with the other(s) predicting a wrong sense. For all relations, this happens in at least half of the cases, with percentages usually being higher than that, for example 200 out of 217 for entity relations and 327 out of 391 for conjunctions.
 
 There are, however, clear differences in difficulty of recognition between the senses. For concessions, results, and restatements, it is more common that all parsers give a wrong result than even a single parser giving a correct one. Apparently, these senses have structures that make them harder to identify for the algorithms. This is consistent with the results we found later, where these senses usually had a lower-than-average or even the lowest F1 score among all senses.
 
@@ -104,7 +103,7 @@ Temp.Synchrony 		 & 76  & 16  & 61  & 15  & 3  \\
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Individual statistics for the three best parsers are shown in table \ref{tab:comp2}, with ''total'' listing the number of predictions made by the parsers for the given sense. The column labeled ''only'' has the number of relations for which only that parser (out of the three) was able to correctly identify the relation sense. This is a far more common occurence for the oslopots (180 total) and ecnucs (166 total) parsers than for the steven parser (56 total). This is important to note for the parser combination approaches, since the oslopots and ecnucs parsers can identify most of the relations sense that the steven parser identifies, while the reverse is not true. The column ''not found'' has the number of relations that could not be aligned.  A reason for this might be that the parser chooses the wrong word or phrase as the connective, but this happens only very rarely.
+Individual statistics for the three best parsers are shown in table \ref{tab:comp2}, with ''total'' listing the number of predictions made by the parsers for the given sense. The column labeled ''only'' has the number of relations for which only that parser (out of the three) was able to correctly identify the relation sense. This is a far more common occurence for the oslopots (180 total) and ecnucs (166 total) parsers than for the steven parser (56 total). This is important to note for the parser combination approaches, since the oslopots and ecnucs parsers can identify most of the relation senses that the steven parser identifies, while the reverse is not true. The column ''not found'' has the number of relations that could not be aligned.  A reason for this might be that the parser chooses the wrong word or phrase as the connective, but this happens only very rarely.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table}[htbp]
@@ -166,15 +165,15 @@ Temp.Synchrony 		 & 60 & 40 & 58 & 18 & 52 & 22 \\
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Finally, the F1 scores for all parsers and relations senses are shown in table \ref{tab:comp4}. Also shown is the underlying machine learning concept of each parser as listed in \cite{xue2016conll}. We can again identify that some senses seem to be more difficult than others as they have low F1 scores for all parsers. Concessions, results, and restatements again appear to be the most difficult senses to identify, while, for example, contrasts and conjunctions appeared to be more easy to classify.
+Finally, the F1 scores for all parsers and relations senses are shown in table \ref{tab:comp4}. Also shown is the underlying machine learning method of each parser as listed in \cite{xue2016conll}. We can again identify that some senses seem to be more difficult than others as they have low F1 scores for all parsers. Concessions, results, and restatements again appear to be the most difficult senses to identify, while, for example, contrasts and conjunctions appear to be more easy to classify.
 
-Because the architectures of the parsers vary greatly, we were not able to form meaningful categories for performance comparison as the same machine learning method may be applied in different ways. Moreover, some of the parsers used additional support materials and may therefore not be directly comparable to other parsers using the same machine learning method. Also, not all teams that submitted a parser to the CoNLL shared task also submitted a system paper describing their approach.
+Because the architectures of the parsers vary greatly, we were not able to form meaningful categories for performance comparison as the same machine learning method may be applied in different ways. Moreover, some of the parsers used additional support materials and may therefore not be directly comparable to other parsers using the same machine learning method. Also, not all teams that submitted a parser to the CoNLL shared task also submitted a system paper describing their approach. We therefore decided against pursuing this investigation further as the differences between the actual parser implementations probably had greater influence on the results than the machine leaning method utilised.
 
-\paragraph*{Combination approaches}
+\subsection*{Combination approaches}
 
 The results of our combination approaches are shown in tables \ref{tab:ours1} and \ref{tab:ours2}. The ''best wins'' approach gave the worst results, with the overall F1 score being 11\% lower than the oslopots results. This might be because selecting only one parser can skip over the good parsers and select one that gave good results in training, but performs poorly on the test data. The other results are all close to the oslopots score. Probability maximisation and best three agreement both give slightly worse results than the oslopots parser, probably due to the same problems as mentioned above. This might also be because, as mentioned above, if two parsers already agree in many cases, adding further parsers may actually decrease the overall accuracy.
 
-The agreement method however, where a simple majority voting between the parsers is utilised, improves the overeall F1 score by about 1\%. While the F1 scores for individual relation senses might decrease slightly (not more than 1\%), for some senses it increases by several percent, for example for Temporal.Asynchronous.Precedence (0.8261 $\rightarrow$ 0.8571).
+The agreement method however, where a simple majority voting between the parsers is utilised, improves the overall F1 score by about 1\%. While the F1 scores for individual relation senses might decrease slightly (not more than 1\%), for some senses they increase by several percent, for example for precedence relations (0.8261 $\rightarrow$ 0.8571).
 
 While the improvements made by combining the parsers are not huge, they are significant and can be used if further slight improvement of the results is desired.
 
@@ -226,7 +225,7 @@ Temp.Asyn.Succession & 0.9600 & 0.7500 & 0.8421 & 0.9216 & 0.7344 & 0.8174 & 0.9
 Temp.Synchrony 		 & 0.5538 & 0.6792 & 0.6102 & 0.5439 & 0.6200 & 0.5794 & 0.5606 & 0.6981 & 0.6218\\ \hline
 Overall 			 & 0.5485 & 0.5476 & 0.5480 & 0.4334 & 0.4334 & 0.4334 & 0.5559 & 0.5550 & 0.5555\\ \hline
 \end{tabular}}
-\caption{Performance comparison between the oslopots parser and our combination approaches. Senses are abbreviated for space reasons.}
+\caption{Performance comparison between the oslopots parser and our combination approaches}
 \label{tab:ours1}
 \end{table}
 
@@ -253,7 +252,7 @@ Temp.Asyn.Succession & 0.9600 & 0.7500 & 0.8421 & 0.9592 & 0.7344 & 0.8319 & 0.9
 Temp.Synchrony 		 & 0.5538 & 0.6792 & 0.6102 & 0.5902 & 0.6923 & 0.6372 & 0.5932 & 0.6731 & 0.6306 \\ \hline
 Overall 			 & 0.5485 & 0.5476 & 0.5480 & 0.5360 & 0.5352 & 0.5356 & 0.5423 & 0.5409 & 0.5416\\ \hline
 \end{tabular}}
-\caption{Performance comparison between the oslopots parser and our combination approaches. Senses are abbreviated for space reasons.}
+\caption{Performance comparison between the oslopots parser and our combination approaches}
 \label{tab:ours2}
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -263,7 +262,7 @@ Overall 			 & 0.5485 & 0.5476 & 0.5480 & 0.5360 & 0.5352 & 0.5356 & 0.5423 & 0.5
 \section*{Conclusion}
 Because the parser architectures varied greatly, we were not able to identify any systematic relationsships between parser architecture or underlying machine learning method and sense classification performance on certain relation senses. We also only had access to the sense-only data and could therefore not extend our analysis to the argument spans predicted by the parsers. We were, however, able to identify similarities across all parsers regarding the overall ''difficulty'' of certain relation senses, with some senses being more difficult to identify reliably for all parsers than other senses.
 
-Furthermore, we have shown that using simple statistical methods to combine several different parsers can slightly increase the sense classification accuracy. The improvement is not that large because for the ''easy'' senses most of the parsers already agreed, while there was nothing we could do in cases where all or most of the parsers calculated a wrong sense. Nevertheless, we were able to improve the accuracy by 0.75\% compared to the best parser submitted to the CoNLL shared task.
+Furthermore, we have shown that using simple statistical methods to combine several different parsers can slightly increase the sense classification accuracy. The improvement is not that large because for the ''easy'' senses most of the parsers already agreed, while there was nothing we could do in cases where all or most of the parsers calculated a wrong sense. Nevertheless, we were able to improve the accuracy by 0.75\% compared to the best parser submitted to the CoNLL shared task. More sophisticated voting methods employing, for example, neural networks may further improve the system performance.
 
 In the end, our possibilities for analysis were limited by the data available to us. Repeating this investigation with more data may give further interesting insights.
 \pagebreak
